content/archived/kubernetes-backing-services/tls-management/examples/kube-lego-usage-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chartmuseum
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: chartmuseum-service
          servicePort: 80
  tls:
  - secretName: chartmuseum-tls
    hosts:
    - example.com
    - www.example.com
